--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <meta name="theme-color" content="#000000">
 <title>Mis Finanzas</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.min.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@300;400;500;600;700&family=Google+Sans+Display:wght@400;500;700;800&display=swap" rel="stylesheet">
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Google+Sans:wght@300;400;500;600;700&family=Google+Sans+Display:wght@400;500;700;800&display=swap');
 :root{
   --spring:cubic-bezier(0.2,0.8,0.2,1);
   --ease:cubic-bezier(0.4,0,0.2,1);
@@ -852,5 +852,5 @@ function initPortfolio(){
 }
 </script>
 
-</body> 
+</body>
 </html>
